--- a/index.html
+++ b/index.html
@@ -81,6 +81,15 @@
                             href="mailto:info@devstudio.com"
                             target="_blank"
                             rel="noopener noreferrer nofollow"
+                            ><svg
+                                viewBox="0 0 100 100"
+                                width="16"
+                                height="12"
+                                class="icon shape-codepen"
+                            >
+                                <use
+                                    xlink:href="./images/icons.svg#icon-mail"
+                                ></use></svg
                             >info@devstudio.com</a
                         >
                     </li>
@@ -88,6 +97,15 @@
                         <a
                             class="contact-link link"
                             href="tel:+380961111111"
+                            ><svg
+                                viewBox="0 0 100 100"
+                                width="10"
+                                height="16"
+                                class="icon shape-codepen"
+                            >
+                                <use
+                                    xlink:href="./images/icons.svg#icon-smartphone"
+                                ></use></svg
                             >+38 096 111 11 11</a
                         >
                     </li>
@@ -115,31 +133,71 @@
             <section class="section sec-padding-bottom-0">
                 <div class="container">
                     <h2 class="visually-hidden">Наші переваги</h2>
-                    <ul class="adv-list">
-                        <li class="adv-item">
+                    <ul class="advertising">
+                        <li class="adv-list icon-sat">
+                            <!-- <svg
+                                viewBox="0 0 100 100"
+                                width="70"
+                                height="70"
+                                class="icon shape-codepen adv-icon"
+                            >
+                                <use
+                                    xlink:href="./images/icons.svg#icon-satellite"
+                                ></use>
+                            </svg> -->
                             <h3 class="adv-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-                            <p class="adv-item">
+                            <p class="adv-content">
                                 Ідейні міркування, і навіть початок повсякденної
                                 роботи з формування позиції.
                             </p>
                         </li>
-                        <li class="adv-item">
+                        <li class="adv-list icon-clock">
+                            <!-- <svg
+                                viewBox="0 0 100 100"
+                                width="70"
+                                height="70"
+                                class="icon shape-codepen adv-icon"
+                            >
+                                <use
+                                    xlink:href="./images/icons.svg#icon-clock"
+                                ></use>
+                            </svg> -->
                             <h3 class="adv-title">ПУНКТУАЛЬНІСТЬ</h3>
-                            <p class="adv-item">
+                            <p class="adv-content">
                                 Завдання організації, особливо рамки і місце
                                 навчання кадрів тягне у себе.
                             </p>
                         </li>
-                        <li class="adv-item">
+                        <li class="adv-list icon-laptop">
+                            <!-- <svg
+                                viewBox="0 0 100 100"
+                                width="70"
+                                height="70"
+                                class="icon shape-codepen adv-icon"
+                            >
+                                <use
+                                    xlink:href="./images/icons.svg#icon-laptop"
+                                ></use>
+                            </svg> -->
                             <h3 class="adv-title">ПЛАНУВАННЯ</h3>
-                            <p class="adv-item">
+                            <p class="adv-content">
                                 Так само консультація з широким активом значною
                                 мірою зумовлює.
                             </p>
                         </li>
-                        <li class="adv-item">
+                        <li class="adv-list icon-space">
+                            <!-- <svg
+                                viewBox="0 0 100 100"
+                                width="70"
+                                height="70"
+                                class="icon shape-codepen adv-icon"
+                            >
+                                <use
+                                    xlink:href="./images/icons.svg#icon-astronaut"
+                                ></use>
+                            </svg> -->
                             <h3 class="adv-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                            <p class="adv-item">
+                            <p class="adv-content">
                                 Значимість цих проблем настільки очевидна, що
                                 реалізація планових завдань.
                             </p>
