--- a/portfolio.html
+++ b/portfolio.html
@@ -81,6 +81,14 @@
                             href="mailto:info@devstudio.com"
                             target="_blank"
                             rel="noopener noreferrer nofollow"
+                            ><svg
+                                viewBox="0 0 100 100"
+                                width="16"
+                                class="icon shape-codepen contact-icon"
+                            >
+                                <use
+                                    xlink:href="./images/icons.svg#icon-mail"
+                                ></use></svg
                             >info@devstudio.com</a
                         >
                     </li>
@@ -88,6 +96,14 @@
                         <a
                             class="contact-link link"
                             href="tel:+380961111111"
+                            ><svg
+                                viewBox="0 0 100 100"
+                                width="10"
+                                class="icon shape-codepen contact-icon"
+                            >
+                                <use
+                                    xlink:href="./images/icons.svg#icon-smartphone"
+                                ></use></svg
                             >+38 096 111 11 11</a
                         >
                     </li>
@@ -286,42 +302,106 @@
 
         <!-- footer, address and contacts  -->
         <footer class="footer">
-            <div class="container">
-                <a
-                    href="./index.html"
-                    class="logo link"
-                    lang="en"
-                    >Web<span class="footer-logo">Studio</span></a
-                >
-                <address class="address">
-                    <ul class="address-list">
-                        <li>
+            <div class="container footer-wrapper">
+                <div class="logo-info">
+                    <a
+                        href="./index.html"
+                        class="logo link"
+                        lang="en"
+                        >Web<span class="footer-logo">Studio</span></a
+                    >
+
+                    <address class="address">
+                        <ul class="address-list">
+                            <li>
+                                <a
+                                    class="address-link link"
+                                    href="https://goo.gl/maps/XYVUcAoSv2epRwpU8"
+                                    target="_blank"
+                                    rel="noopener noreferrer nofollow"
+                                    >м. Київ, пр-т Лесі Українки, 26</a
+                                >
+                            </li>
+                            <li>
+                                <a
+                                    class="footer-link link"
+                                    href="mailto:info@devstudio.com"
+                                    target="_blank"
+                                    rel="noopener noreferrer nofollow"
+                                    >info@devstudio.com</a
+                                >
+                            </li>
+                            <li>
+                                <a
+                                    class="footer-link link"
+                                    href="tel:+380961111111"
+                                    >+38 096 111 11 11</a
+                                >
+                            </li>
+                        </ul>
+                    </address>
+                </div>
+                <div class="footer-social">
+                    <p class="social-text">приєднуйтесь</p>
+                    <ul class="social-list footer-list">
+                        <li class="social-item">
                             <a
-                                class="address-link link"
-                                href="https://goo.gl/maps/XYVUcAoSv2epRwpU8"
-                                target="_blank"
-                                rel="noopener noreferrer nofollow"
-                                >м. Київ, пр-т Лесі Українки, 26</a
-                            >
+                                class="social-ico footer-ico"
+                                href=""
+                                ><svg
+                                    viewBox="0 0 100 100"
+                                    width="20"
+                                    class="icon shape-codepen"
+                                >
+                                    <use
+                                        xlink:href="./images/icons.svg#icon-instagram"
+                                    ></use></svg
+                            ></a>
                         </li>
-                        <li>
+                        <li class="social-item">
                             <a
-                                class="footer-link link"
-                                href="mailto:info@devstudio.com"
-                                target="_blank"
-                                rel="noopener noreferrer nofollow"
-                                >info@devstudio.com</a
-                            >
+                                class="social-ico footer-ico"
+                                href=""
+                                ><svg
+                                    viewBox="0 0 100 100"
+                                    width="20"
+                                    class="icon shape-codepen"
+                                >
+                                    <use
+                                        xlink:href="./images/icons.svg#icon-twitter"
+                                    ></use></svg
+                            ></a>
                         </li>
-                        <li>
+                        <li class="social-item">
                             <a
-                                class="footer-link link"
-                                href="tel:+380961111111"
-                                >+38 096 111 11 11</a
-                            >
+                                class="social-ico footer-ico"
+                                href=""
+                                ><svg
+                                    viewBox="0 0 100 100"
+                                    width="20"
+                                    class="icon shape-codepen"
+                                >
+                                    <use
+                                        xlink:href="./images/icons.svg#icon-facebook"
+                                    ></use></svg
+                            ></a>
+                        </li>
+                        <li class="social-item">
+                            <a
+                                class="social-ico footer-ico"
+                                href=""
+                                ><svg
+                                    viewBox="0 0 100 100"
+                                    width="20"
+                                    class="icon shape-codepen"
+                                >
+                                    <use
+                                        xlink:href="./images/icons.svg#icon-linkedin"
+                                    ></use></svg
+                            ></a>
                         </li>
                     </ul>
-                </address>
+                </div>
             </div>
         </footer>
     </body>
