--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                             ><svg
                                 viewBox="0 0 100 100"
                                 width="16"
+                                height="12"
                                 class="icon shape-codepen contact-icon"
                             >
                                 <use
@@ -99,6 +100,7 @@
                             ><svg
                                 viewBox="0 0 100 100"
                                 width="10"
+                                height="16"
                                 class="icon shape-codepen contact-icon"
                             >
                                 <use
@@ -133,16 +135,6 @@
                     <h2 class="visually-hidden">Наші переваги</h2>
                     <ul class="advertising">
                         <li class="adv-list icon-sat">
-                            <!-- <svg
-                                viewBox="0 0 100 100"
-                                width="70"
-                                height="70"
-                                class="icon shape-codepen adv-icon"
-                            >
-                                <use
-                                    xlink:href="./images/icons.svg#icon-satellite"
-                                ></use>
-                            </svg> -->
                             <h3 class="adv-title">УВАГА ДО ДЕТАЛЕЙ</h3>
                             <p class="adv-content">
                                 Ідейні міркування, і навіть початок повсякденної
@@ -150,50 +142,20 @@
                             </p>
                         </li>
                         <li class="adv-list icon-clock">
-                            <!-- <svg
-                                viewBox="0 0 100 100"
-                                width="70"
-                                height="70"
-                                class="icon shape-codepen adv-icon"
-                            >
-                                <use
-                                    xlink:href="./images/icons.svg#icon-clock"
-                                ></use>
-                            </svg> -->
                             <h3 class="adv-title">ПУНКТУАЛЬНІСТЬ</h3>
                             <p class="adv-content">
                                 Завдання організації, особливо рамки і місце
                                 навчання кадрів тягне у себе.
                             </p>
                         </li>
-                        <li class="adv-list icon-laptop">
-                            <!-- <svg
-                                viewBox="0 0 100 100"
-                                width="70"
-                                height="70"
-                                class="icon shape-codepen adv-icon"
-                            >
-                                <use
-                                    xlink:href="./images/icons.svg#icon-laptop"
-                                ></use>
-                            </svg> -->
+                        <li class="adv-list icon-diag">
                             <h3 class="adv-title">ПЛАНУВАННЯ</h3>
                             <p class="adv-content">
                                 Так само консультація з широким активом значною
                                 мірою зумовлює.
                             </p>
                         </li>
-                        <li class="adv-list icon-space">
-                            <!-- <svg
-                                viewBox="0 0 100 100"
-                                width="70"
-                                height="70"
-                                class="icon shape-codepen adv-icon"
-                            >
-                                <use
-                                    xlink:href="./images/icons.svg#icon-astronaut"
-                                ></use>
-                            </svg> -->
+                        <li class="adv-list icon-astronaut">
                             <h3 class="adv-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                             <p class="adv-content">
                                 Значимість цих проблем настільки очевидна, що
