--- a/contacts.html
+++ b/contacts.html
@@ -82,12 +82,13 @@
                             target="_blank"
                             rel="noopener noreferrer nofollow"
                             ><svg
-                                viewBox="0 0 100 100"
+                                viewBox
                                 width="16"
+                                height="12"
                                 class="icon shape-codepen contact-icon"
                             >
                                 <use
-                                    xlink:href="./images/icons.svg#icon-mail"
+                                    href="./images/icons.svg#icon-mail"
                                 ></use></svg
                             >info@devstudio.com</a
                         >
@@ -97,12 +98,13 @@
                             class="contact-link link"
                             href="tel:+380961111111"
                             ><svg
-                                viewBox="0 0 100 100"
+                                viewBox
                                 width="10"
+                                height="16"
                                 class="icon shape-codepen contact-icon"
                             >
                                 <use
-                                    xlink:href="./images/icons.svg#icon-smartphone"
+                                    href="./images/icons.svg#icon-smartphone"
                                 ></use></svg
                             >+38 096 111 11 11</a
                         >
@@ -165,12 +167,13 @@
                                 class="social-ico footer-ico"
                                 href=""
                                 ><svg
-                                    viewBox="0 0 100 100"
+                                    viewBox
                                     width="20"
+                                    hight="20"
                                     class="icon shape-codepen"
                                 >
                                     <use
-                                        xlink:href="./images/icons.svg#icon-instagram"
+                                        href="./images/icons.svg#icon-instagram"
                                     ></use></svg
                             ></a>
                         </li>
@@ -179,12 +182,13 @@
                                 class="social-ico footer-ico"
                                 href=""
                                 ><svg
-                                    viewBox="0 0 100 100"
+                                    viewBox
                                     width="20"
+                                    hight="20"
                                     class="icon shape-codepen"
                                 >
                                     <use
-                                        xlink:href="./images/icons.svg#icon-twitter"
+                                        href="./images/icons.svg#icon-twitter"
                                     ></use></svg
                             ></a>
                         </li>
@@ -193,12 +197,13 @@
                                 class="social-ico footer-ico"
                                 href=""
                                 ><svg
-                                    viewBox="0 0 100 100"
+                                    viewBox
                                     width="20"
+                                    hight="20"
                                     class="icon shape-codepen"
                                 >
                                     <use
-                                        xlink:href="./images/icons.svg#icon-facebook"
+                                        href="./images/icons.svg#icon-facebook"
                                     ></use></svg
                             ></a>
                         </li>
@@ -207,12 +212,13 @@
                                 class="social-ico footer-ico"
                                 href=""
                                 ><svg
-                                    viewBox="0 0 100 100"
+                                    viewBox
                                     width="20"
+                                    hight="20"
                                     class="icon shape-codepen"
                                 >
                                     <use
-                                        xlink:href="./images/icons.svg#icon-linkedin"
+                                        href="./images/icons.svg#icon-linkedin"
                                     ></use></svg
                             ></a>
                         </li>
