--- a/index.html
+++ b/index.html
@@ -134,28 +134,76 @@
                 <div class="container">
                     <h2 class="visually-hidden">Наші переваги</h2>
                     <ul class="advertising">
-                        <li class="adv-list icon-sat">
+                        <li class="adv-list">
+                            <div class="adv-wrap icon-sat">
+                                <svg
+                                    viewBox
+                                    width="70"
+                                    height="70"
+                                    class="icon shape-codepen"
+                                >
+                                    <use
+                                        href="./images/icons.svg#icon-satellite"
+                                    ></use>
+                                </svg>
+                            </div>
                             <h3 class="adv-title">УВАГА ДО ДЕТАЛЕЙ</h3>
                             <p class="adv-content">
                                 Ідейні міркування, і навіть початок повсякденної
                                 роботи з формування позиції.
                             </p>
                         </li>
-                        <li class="adv-list icon-clock">
+                        <li class="adv-list">
+                            <div class="adv-wrap icon-clock">
+                                <svg
+                                    viewBox
+                                    width="70"
+                                    height="70"
+                                    class="icon shape-codepen"
+                                >
+                                    <use
+                                        href="./images/icons.svg#icon-clock"
+                                    ></use>
+                                </svg>
+                            </div>
                             <h3 class="adv-title">ПУНКТУАЛЬНІСТЬ</h3>
                             <p class="adv-content">
                                 Завдання організації, особливо рамки і місце
                                 навчання кадрів тягне у себе.
                             </p>
                         </li>
-                        <li class="adv-list icon-diag">
+                        <li class="adv-list">
+                            <div class="adv-wrap icon-diag">
+                                <svg
+                                    viewBox
+                                    width="70"
+                                    height="70"
+                                    class="icon shape-codepen"
+                                >
+                                    <use
+                                        href="./images/icons.svg#icon-laptop"
+                                    ></use>
+                                </svg>
+                            </div>
                             <h3 class="adv-title">ПЛАНУВАННЯ</h3>
                             <p class="adv-content">
                                 Так само консультація з широким активом значною
                                 мірою зумовлює.
                             </p>
                         </li>
-                        <li class="adv-list icon-astronaut">
+                        <li class="adv-list">
+                            <div class="adv-wrap icon-astronaut">
+                                <svg
+                                    viewBox
+                                    width="70"
+                                    height="70"
+                                    class="icon shape-codepen"
+                                >
+                                    <use
+                                        href="./images/icons.svg#icon-astronaut"
+                                    ></use>
+                                </svg>
+                            </div>
                             <h3 class="adv-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                             <p class="adv-content">
                                 Значимість цих проблем настільки очевидна, що
